--- a/manifest.json
+++ b/manifest.json
@@ -14,15 +14,5 @@
   "description": "SF test Webseite",
 
   "manifest_version": 2,
-  "version": "0.2.5",
-
-  "icons": [{
-    "src": "./assets/icon/icon192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  },{
-    "src": "./assets/icon/icon.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }]
+  "version": "0.2.5"
 }
